clusters/homelab/my-applications/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
    - name: web
      port: 9898
      protocol: TCP
      targetPort: web
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
